--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ categories = ["multimedia", "command-line-utilities"]
 clap = { version = "4.0", features = ["derive"] }
 image = "0.24"
 rayon = "1.8"
-colored = "2.0" 
+colored = "2.0"
+rawloader = "0.37" 
