--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,22 @@ repository = "https://github.com/fcsonline/lapsify"
 keywords = ["timelapse", "image", "video", "processing"]
 categories = ["multimedia", "command-line-utilities"]
 
+[[bin]]
+name = "lapsify"
+path = "src/main.rs"
+
+[[bin]]
+name = "lapsify-gui"
+path = "src/gui.rs"
+
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 image = "0.24"
 rayon = "1.8"
-colored = "2.0" 
+colored = "2.0"
+
+# GUI dependencies
+eframe = "0.26"
+egui = "0.26"
+egui_extras = "0.26"
+rfd = "0.13" 
