--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,5 @@ egui = "0.28"
 tokio = { version = "1.0", features = ["full"] }
 rfd = "0.14"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 env_logger = "0.10" 
