--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,5 @@ tokio = { version = "1.0", features = ["full"] }
 rfd = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-env_logger = "0.10" 
+env_logger = "0.10"
+dirs = "5.0" 
